--- a/Exercises/html-css-git-exercises/week-1/4-links-scripts/index.html
+++ b/Exercises/html-css-git-exercises/week-1/4-links-scripts/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" type="text/css" href="missing-styles.css">
+    <link rel="stylesheet" type="text/css" href="css/missing-styles.css" />
     <meta charset="utf-8" />
     <title>4. Adding Links and Scripts - HTML, CSS and Git Exercises</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
