--- a/Exercises/html-css-git-exercises/week-2/12-justify-content/index.html
+++ b/Exercises/html-css-git-exercises/week-2/12-justify-content/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    space
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>12 - Justify Content - HTML, CSS and Git Exercises</title>
     <link rel="stylesheet" href="/css/normalize.css" />
     <link rel="stylesheet" href="/css/week2.css" />
     <link rel="stylesheet" href="flexbox.css" />
   </head>
-
   <body>
     <div class="site-wrapper">
       <div class="panel">
