--- a/Exercises/CV-Styling/public/style1/index.html
+++ b/Exercises/CV-Styling/public/style1/index.html
@@ -6,8 +6,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- /Meta tags -->
 
+  <!-- /Meta tags -->
+  <link rel="stylesheet" type="text/css" href="style.css" />
   <title>Jad Sarout | CV</title>
   
   <!-- Stylesheets -->
