--- a/Challenge/HTML/BayanSwaid HTML 2.html
+++ b/Challenge/HTML/BayanSwaid HTML 2.html
@@ -13,13 +13,15 @@
     </header>
     <div id="wrapper">
         <h1>Level 2</h1>
-        <ol>
-            <li>Header</li>
-            <li>Footer</li>
-            <li>Paragraph</li>
-            <li>Heading</li>
-        </ol>
-        <img src="img1.jpg" alt="profile photo" />
+        <div>
+        <ul class="menu">
+                <li class="menuTab"><a href="#home">Home</a></li>
+                <li class="menuTab"><a href="#news">News</a></li>
+                <li class="menuTab"><a href="#contact">Contact</a></li>
+                <li class="menuTab"><a href="#about">About</a></li>
+              </ul>
+            </div>
+            <div>   <br><br>     <img src="img1.jpg" alt="profile photo" /></div>
         <ul>
             <li>Computer Science</li>
             <li>Computer Engineering</li>
@@ -30,3 +32,4 @@
     </div>
     <footer>Copyright &#169; 2019 <a href="https://codi.tech">Codi Tech</a></footer>
 </body>
+</html>
