Completed HTML challenge

--- a/Challenge/HTML/BayanSwaid HTML 2.html
+++ b/Challenge/HTML/BayanSwaid HTML 2.html
@@ -6,6 +6,7 @@
     <title>HTML Challenge</title>
     <link rel="stylesheet" href="BayanSwaid CSS 2.css" />
 </head>
+
 <body>
     <header>
         <u>Welcome to the first HTML challenge --- Tuesday - 10 - December - 2019</u>
@@ -14,14 +15,14 @@
     <div id="wrapper">
         <h1>Level 2</h1>
         <div>
-        <ul class="menu">
-                <li class="menuTab"><a href="#home">Home</a></li>
-                <li class="menuTab"><a href="#news">News</a></li>
-                <li class="menuTab"><a href="#contact">Contact</a></li>
-                <li class="menuTab"><a href="#about">About</a></li>
-              </ul>
-            </div>
-            <div>   <br><br>     <img src="img1.jpg" alt="profile photo" /></div>
+            <nav>
+                <a href="#">Home</a> |
+                <a href="#">News</a> |
+                <a href="#"">Contact</a> |
+                <a href="#">About</a>
+            </nav>
+        </div>
+        <div> <br><br> <img src="img1.jpg" alt="profile photo" /></div>
         <ul>
             <li>Computer Science</li>
             <li>Computer Engineering</li>
@@ -32,4 +33,5 @@
     </div>
     <footer>Copyright &#169; 2019 <a href="https://codi.tech">Codi Tech</a></footer>
 </body>
+
 </html>
