Completed HTML challenge

--- a/Challenge/HTML/BayanSwaid HTML 3.html
+++ b/Challenge/HTML/BayanSwaid HTML 3.html
@@ -79,8 +79,9 @@
         </div></div>   
         
         <div id="footer">
-        <hr>
-        <footer>Copyright &#169; 2019 <a href="https://codi.tech">Codi Tech</a></footer>
+                <br><br>
+        <hr><br>
+        <footer>Copyright &#169; 2019</footer>
     </div></div>
 </body>
 
