--- a/Exercises/Javascript-Basics-02/step 5/index.html
+++ b/Exercises/Javascript-Basics-02/step 5/index.html
@@ -6,11 +6,11 @@
   </head>
   <body>
     <div class="container">
-      <img src="images/image1.jpg" id="image1" />
-      <img src="images/image2.jpg" id="image2" />
-      <img src="images/image3.jpg" id="image3" />
-      <img src="images/image4.jpg" id="image4" />
-      <img src="images/image5.jpg" id="image5" />
+      <img src="images/image1.jpg" id="image1" onmouseover="change(1)" />
+      <img src="images/image2.jpg" id="image2" onmouseover="change(2)" />
+      <img src="images/image3.jpg" id="image3" onmouseover="change(3)" />
+      <img src="images/image4.jpg" id="image4" onmouseover="change(4)" />
+      <img src="images/image5.jpg" id="image5" onmouseover="change(5)" />
     </div>
     <script src="step5.js" />
   </body>
