--- a/Exercises/Javascript-Basics-02/step 6/index.html
+++ b/Exercises/Javascript-Basics-02/step 6/index.html
@@ -1,14 +1,40 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Step 6</title>
   </head>
   <body>
-      <img src="images/image1.jpg" id="image1" />
-      <img src="images/image2.jpg" id="image2" />
-      <img src="images/image3.jpg" id="image3" />
-      <img src="images/image4.jpg" id="image4" />
-      <img src="images/image5.jpg" id="image5" />
+    <img
+      src="images/image1.jpg"
+      id="image1"
+      onmouseover="change(1)"
+      onmouseout="leave(1)"
+    />
+    <img
+      src="images/image2.jpg"
+      id="image2"
+      onmouseover="change(2)"
+      onmouseout="leave(2)"
+    />
+    <img
+      src="images/image3.jpg"
+      id="image3"
+      onmouseover="change(3)"
+      onmouseout="leave(3)"
+    />
+    <img
+      src="images/image4.jpg"
+      id="image4"
+      onmouseover="change(4)"
+      onmouseout="leave(4)"
+    />
+    <img
+      src="images/image5.jpg"
+      id="image5"
+      onmouseover="change(5)"
+      onmouseout="leave(5)"
+    />
+    <script src="step6.js" />
   </body>
 </html>
