--- a/Challenge/HTML/BayanSwaid HTML 3.html
+++ b/Challenge/HTML/BayanSwaid HTML 3.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>HTML Challenge</title>
+    <title>HTML Challeng    display: inline-block;
+            e</title>
     <link rel="stylesheet" href="BayanSwaid CSS 3.css" />
 </head>
 
