--- a/Community Project/NewsAndEvents.html
+++ b/Community Project/NewsAndEvents.html
@@ -8,6 +8,7 @@
     <title>Traffic in Lebanon</title>
     <link rel="shortcut icon" type="image/x-icon"
         href="./assets/Graphicloads-Colorful-Long-Shadow-Traffic-signal.ico" />
+    <link rel="stylesheet" type="text/css" href="./css/newsAndEvents.css">
 
     <link rel="stylesheet" type="text/css" href="./css/index.css">
 
@@ -37,7 +38,17 @@
                 </div>
             </div>
         </header>
+        <main>
+            <div class="first-event">
+                <img src="assets/1st-event.gif" class="first-event-img" alt="cycling" width="100px" height="100px" />
+                <a href="#" class="first-event-date">
+                    <h3>02</h3>
+                    <p>February</p>
+                </a>
+            </div>
+        </main>
     </div>
+
 </body>
 
 </html>
