--- a/Community Project/Home.html
+++ b/Community Project/Home.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Traffic in Lebanon</title>
-    <link rel="shortcut icon" type="image/x-icon" href="./assets/Graphicloads-Colorful-Long-Shadow-Traffic-signal.ico" />
+    <link rel="shortcut icon" type="image/x-icon"
+        href="./assets/Graphicloads-Colorful-Long-Shadow-Traffic-signal.ico" />
 
     <link rel="stylesheet" type="text/css" href="./css/index.css">
+    <link rel="stylesheet" type="text/css" href="./css/home.css">
 </head>
 <body>
     <div id="wrapper">
@@ -15,27 +18,31 @@
             <div class="header-area">
                 <div id="sticky-header">
                     <div class="logo">
-                    <a href="Home.html">
-                        <img src="./assets/logo.jpg" alt="traffic" class="logo-image" />
-                    </a>
-                </div>
+                        <a href="Home.html">
+                            <img src="./assets/logo.jpg" alt="traffic" class="logo-image" />
+                        </a>
+                    </div>
                     <div class="title">
                         <h3>Traffic in Lebanon</h3>
                         <h4>Walk Instead!</h4>
                     </div>
                 </div>
-                    <div class="navBlock">
-                        <nav>
-                            <a href="Home.html">Home</a> |
-                            <a href="NewsAndEvents.html">News and Events</a> |
-                            <a href="Contact.html">Contact us</a>
-                        </nav>
-                    </div>               
+                <div class="navBlock">
+                    <nav>
+                        <a href="Home.html">Home</a> |
+                        <a href="NewsAndEvents.html">News and Events</a> |
+                        <a href="Contact.html">Contact us</a>
+                    </nav>
+                </div>
             </div>
         </header>
         <main>
-
+            <div class="intro">
+              <div class="intro-header">
+                <img src="assets/intro-image.jpg" class="intro-image" alt="traffic" /><h3>Intro</h3></div><p>While  seasonal  bottlenecks  are  common  in  the  world,  Lebanon  suffers  from  a  chronic  traffic problem that dates  back to the 1990s, when the  15-Year  Lebanese civil war finally ended.  Since then,  the  situation  has  aggravated  due  to  the  deteriorating  condition  of  the  road  network,  the absence  of  a  reliable  public  transportation  system,  and  recently  the  influx  of  more  than  one million officially registered Syrian refugees escaping the war in their home country.</p>
+            </div>
         </main>
     </div>
 </body>
+
 </html>
